# flake8-click

./: .bento-whitelist.yml  .bento.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  Pipfile  README.md  click_best_practices.py  flake8_click.py  makefile  pyproject.toml  run_transform.py  setup.py
examples/: bad_examples.py
flake8_click/: flake8_click.py
tests/: bad_examples.py  test_flake8_click.py  test_launch_checker.py  test_naming_checker.py  test_option_help_checker.py  test_option_param_name_checker.py  test_option_param_name_transformer.py
transformers/: flake8_transformer.py
