[tool.poetry]
name = "flake8-click"
version = "0.2.5"
description = "Flake8 linter for the Click module"
readme = "README.md"
authors = ["R2C <hello@returntocorp.com>"]
homepage = "https://r2c.dev"
classifiers=[
  "Environment :: Console",
  "Framework :: Flake8",
  "Framework :: Click",
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
packages = [
  { include = "flake8_click"},
]
exclude = ["tests/**", "transformers/**"]
keywords = ["flake8", "markdown", "lint", "linter", "bento", "r2c", "click"]


[tool.poetry.dependencies]
attrs = "*"
python = "^3.6"
flake8 = "^3.7"
libcst = "^0.2.4"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
r2c-click-best-practices = "flake8_click.flake8_click:ClickPracticeCheckers"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
